--- a/microservices.yaml
+++ b/microservices.yaml
@@ -20,8 +20,13 @@ spec:
     spec:
       containers:
       - name: carservice
-        image: carservice:1
-        imagePullPolicy: Never
+        image: efrei/carservice
+        imagePullPolicy: Always
+        env:
+          - name: ECHO_SERVICE_HOST
+            value: carstat
+          - name: ECHO_SERVICE_PORT
+            value: "8080"
 #        livenessProbe:
 #          initialDelaySeconds: 180
 #          httpGet:
@@ -72,6 +77,7 @@ spec:
   - match:
     - uri:
         prefix: /carservice/
+#        regex: '\/carservice\/*'
     rewrite:
       uri: /
     route:
@@ -79,3 +85,65 @@ spec:
         port:
           number: 80
         host: carservice.default.svc.cluster.local
+
+---
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    run: carstat
+  name: carstat
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      run: carstat
+  template:
+    metadata:
+      labels:
+        run: carstat
+    spec:
+      containers:
+        - name: carstat
+          image: efrei/carstat
+          imagePullPolicy: Always
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    run: carstat
+  name: carstat
+spec:
+  ports:
+    - name: grpc-web
+      port: 8080
+      targetPort: 8080
+  selector:
+    run: carstat
+  sessionAffinity: None
+  type: ClusterIP
+
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: carstat
+spec:
+  hosts:
+    - "*"
+  gateways:
+    - microservice-gateway
+  http:
+    - match:
+        - uri:
+            prefix: /carstat/
+      rewrite:
+        uri: /
+      route:
+        - destination:
+            port:
+              number: 80
+            host: carstat.default.svc.cluster.local
+
