--- a/carservice/src/main/resources/application.properties
+++ b/carservice/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.url=jdbc:postgresql://postgres/dbcar
 spring.datasource.username=dbuser
 spring.datasource.password=dbpass
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+CUSTOMER.SERVICE.HOST=carstat
+CUSTOMER.SERVICE.PORT=8080
