--- a/carservice/build.gradle
+++ b/carservice/build.gradle
@@ -13,6 +13,15 @@ repositories {
 	mavenCentral()
 }
 
+sourceSets {
+	main {
+		java {
+			srcDirs 'build/generated/source/proto/main/grpc'
+			srcDirs 'build/generated/source/proto/main/java'
+		}
+	}
+}
+
 protobuf {
 	protoc {
 		artifact = "com.google.protobuf:protoc:3.12.0"
@@ -38,6 +47,7 @@ dependencies {
 	implementation 'io.grpc:grpc-stub:1.34.1'
 	implementation 'io.grpc:grpc-netty-shaded:1.34.1'
 	compileOnly 'org.apache.tomcat:annotations-api:6.0.53'
+	testImplementation 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
