--- a/carstat/build.gradle
+++ b/carstat/build.gradle
@@ -13,6 +13,15 @@ repositories {
 	mavenCentral()
 }
 
+sourceSets {
+	main {
+		java {
+			srcDirs 'build/generated/source/proto/main/grpc'
+			srcDirs 'build/generated/source/proto/main/java'
+		}
+	}
+}
+
 protobuf {
 	protoc {
 		artifact = "com.google.protobuf:protoc:3.12.0"
