--- a/carservice/build.gradle
+++ b/carservice/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
 	implementation 'org.postgresql:postgresql'
 	implementation 'io.grpc:grpc-protobuf:1.34.1'
 	implementation 'io.grpc:grpc-stub:1.34.1'
