--- a/carservice/src/main/resources/application.properties
+++ b/carservice/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 server.port=8080
+
+# server.forward-headers-strategy=framework
+
 spring.application.name=carservice
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://postgres/dbcar
