--- a/carservice/src/test/resources/application.properties
+++ b/carservice/src/test/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.format-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
+
+CUSTOMER.SERVICE.HOST=carstat
+CUSTOMER.SERVICE.PORT=8080
