--- a/deploymentaction.yaml
+++ b/deploymentaction.yaml
@@ -1,3 +1,16 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: postgres-config
+  labels:
+    app: postgres
+data:
+  POSTGRES_DB: dbcar
+  POSTGRES_USER: dbuser
+  POSTGRES_PASSWORD: dbpass
+
+---
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -26,11 +39,9 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 5432
-          env:
-            - name: POSTGRES_USER
-              value: "dbuser"
-            - name: POSTGRES_PASSWORD
-              value: "dbpass"
+          envFrom:
+            - configMapRef:
+                name: postgres-config
           resources: {}
           volumeMounts:
             - name: postgres
