--- a/carservice/src/main/resources/application.properties
+++ b/carservice/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 CUSTOMER.SERVICE.HOST=carstat
 CUSTOMER.SERVICE.PORT=8080
+
+management.health.probes.enabled=true
