--- a/microservices.yaml
+++ b/microservices.yaml
@@ -20,22 +20,22 @@ spec:
     spec:
       containers:
       - name: carservice
-        image: charroux/carservice:1
+        image: charroux/carservice:2
         imagePullPolicy: Always
         env:
           - name: CUSTOMER_SERVICE_HOST
             value: carstat
           - name: CUSTOMER_SERVICE_PORT
             value: "8080"
-#        livenessProbe:
-#          initialDelaySeconds: 180
-#          httpGet:
-#            path: /actuator/health
-#            port: 8080
-#        readinessProbe:
-#          httpGet:
-#            path: /
-#            port: 8080
+        livenessProbe:
+          initialDelaySeconds: 180
+          httpGet:
+            path: /actuator/health
+            port: 8080
+        readinessProbe:
+          httpGet:
+            path: /actuator/health
+            port: 8080
         ports:
         - containerPort: 8080
         resources: {}
