--- a/microservices.yaml
+++ b/microservices.yaml
@@ -7,7 +7,7 @@ metadata:
     version: "1.0"
   name: carservice
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: carservice
@@ -58,7 +58,7 @@ spec:
     name: http    
   selector:
     app: carservice
-  type: NodePort
+  type: LoadBalancer
 status:
   loadBalancer: {}
 
